# SafeC

./: .gitignore  LICENSE  README.md  install-release.ps1  install-release.sh  install.bat  install.ps1  install.sh
.github/scripts/: smoke-test.sh
.github/workflows/: ci.yml  release.yml
boards/: README.md  cortex-m4.cmake  riscv32.cmake  riscv64.cmake  x86_64-bare.cmake
compiler/: CMakeLists.txt
compiler/examples/: advanced_features.sc  arena.sc  atomics.sc  baremetal.sc  bounds.sc  c_headers.sc  channels.sc  closures.sc  concurrency.sc  consteval_demo.sc  effects.sc  generics.sc  generics_mono.sc  hello.sc  m1_operator_overload.sc  m2_tuples.sc  m3_arena_new.sc  m4_closures.sc  m5_traits.sc  methods.sc  new_features.sc  operators.sc  outliving_refs.sc  preproc.sc  reflection.sc  regions.sc  slices.sc  stdlib_complete.sc  tagged_union.sc  tuples.sc  unsafe.sc  variadic.sc
compiler/include/safec/: AST.h  CHeaderImporter.h  Clone.h  CodeGen.h  ConstEval.h  Diagnostic.h  Lexer.h  Parser.h  Preprocessor.h  Sema.h  Token.h  Type.h
compiler/src/: AST.cpp  CHeaderImporter.cpp  Clone.cpp  CodeGen.cpp  ConstEval.cpp  Lexer.cpp  Parser.cpp  Preprocessor.cpp  Sema.cpp  Type.cpp  main.cpp
examples/fullstack_demo/: .gitignore  Package.toml
examples/fullstack_demo/src/: counter_client.sc  main.sc  pages.scx
examples/fullstack_demo/static/: counter_client.js  counter_client.wasm
proofs/: SafeCCore.lean
safeguard/: CMakeLists.txt
safeguard/include/: Analyzer.h  Builder.h  Formatter.h  Lock.h  Manifest.h  Project.h  ScxTranspiler.h
safeguard/src/: Analyzer.cpp  Builder.cpp  Formatter.cpp  Lock.cpp  Manifest.cpp  Project.cpp  ScxTranspiler.cpp  main.cpp
safeguard/templates/: Package.toml.in  main.sc.in
std/: assert.h  assert.sc  atomic.h  atomic.sc  bit.h  bit.sc  complex.h  complex.sc  convert.h  convert.sc  ctype.h  ctype.sc  dma.h  dma.sc  errno.h  errno.sc  errno_compat.h  fenv.h  fenv.sc  float.h  fmt.h  fmt.sc  heap.h  heap.sc  inttypes.h  io.h  io.sc  io_file.h  io_file.sc  limits.h  locale.h  locale.sc  log.h  log.sc  math.h  math.sc  mem.h  mem.sc  panic.h  panic.sc  (+20 more)
std/alloc/: bump.h  bump.sc  pool.h  pool.sc  slab.h  slab.sc  tlsf.h  tlsf.sc
std/collections/: bst.h  bst.sc  btree.h  btree.sc  list.h  list.sc  map.h  map.sc  queue.h  queue.sc  ringbuffer.h  ringbuffer.sc  slice.h  slice.sc  stack.h  stack.sc  static_vec.h  string.h  string.sc  vec.h  vec.sc
std/crypto/: aes.h  aes.sc  crypto.h  hmac.h  hmac.sc  rng.h  rng.sc  secure_alloc.h  secure_alloc.sc  sha1.h  sha1.sc  sha256.h  sha256.sc  sha512.h  sha512.sc  tls.h  tls.sc  x509.h  x509.sc
std/debug/: coverage.h  coverage.sc  debug.h  jtag.h  jtag.sc  perf.h  perf.sc
std/dsp/: audio_buffer.h  audio_buffer.sc  biquad.h  biquad.sc  comb.h  comb.sc  complex_dsp.h  complex_dsp.sc  convolution.h  convolution.sc  cqt.h  cqt.sc  cwt.h  cwt.sc  dct.h  dct.sc  dft.h  dft.sc  dsp.h  dsp.sc  dsp_all.h  fft.h  fft.sc  filter.h  filter.sc  fixed.h  fixed.sc  imaging.h  imaging.sc  minphase.h  minphase.sc  resample.h  resample.sc  stft.h  stft.sc  timer_wheel.h  timer_wheel.sc  window.h  window.sc  ztransform.h  (+1 more)
std/encoding/: ascii.h  ascii.sc  base64.h  base64.sc  encoding.h  url.h  url.sc  utf8.h  utf8.sc
std/fs/: block.h  block.sc  ext.h  ext.sc  fat.h  fat.sc  fs.h  partition.h  partition.sc  tmpfs.h  tmpfs.sc  vfs.h  vfs.sc
std/gui/: gui.h  gui_cocoa.sc  gui_draw.h  gui_draw.sc  gui_fb.sc  gui_font.h  gui_font.sc  gui_png.h  gui_png.sc  gui_svg.h  gui_svg.sc  gui_widget.h  gui_widget.sc  gui_win32.sc  gui_x11.sc
std/hal/: aarch64.h  aarch64.sc  cortex_m.h  cortex_m.sc  gpio.h  gpio.sc  i2c.h  i2c.sc  riscv.h  riscv.sc  spi.h  spi.sc  timer.h  timer.sc  uart.h  uart.sc  watchdog.h  watchdog.sc
std/http/: cors.h  cors.sc  http.h  http.sc  jwt.h  jwt.sc  oauth2.h  oauth2.sc  websocket.h  websocket.sc
std/interrupt/: bitfield.h  bitfield.sc  clock.h  clock.sc  isr.h  isr.sc  mmio.h  mmio.sc  vector_table.h  vector_table.sc
std/ipc/: pipe.h  pipe_posix.sc  pipe_win32.sc  uds.h  uds_bsd.sc  uds_linux.sc
std/kernel/: frame.h  frame.sc  ipc.h  ipc.sc  mmu.h  mmu.sc  paging.h  paging.sc  process.h  process.sc  scheduler.h  scheduler.sc  syscall.h  syscall.sc
std/ml/: ROADMAP.md  activations.h  activations.sc  attention.h  attention.sc  attention_advanced.h  attention_advanced.sc  cnn.h  cnn.sc  diffusion.h  diffusion.sc  gpu_cuda.h  gpu_cuda.sc  gpu_mps.h  gpu_mps.sc  gpu_mps_kernels.metal  gpu_mps_metallib.h  gpu_rocm.h  gpu_rocm.sc  gpu_spirv.sc  gpu_webgpu.sc  llm.h  llm.sc  rnn.h  rnn.sc  safetensors.h  safetensors.sc  tensor.h  tensor.sc  tensor_auto.h  tensor_auto.sc  tensor_cuda.h  tensor_cuda.sc  tensor_gpu.h  tensor_gpu.sc  tensor_rocm.h  tensor_rocm.sc  tensor_spirv.h  tensor_spirv.sc  tensor_vdsp.h  (+7 more)
std/net/: arp.h  arp.sc  dhcp.h  dhcp.sc  dns.h  dns.sc  ethernet.h  ethernet.sc  ipv4.h  ipv4.sc  ipv6.h  ipv6.sc  net.h  net_core.h  net_core.sc  tcp.h  tcp.sc  udp.h  udp.sc
std/reactive/: signal.h  signal.sc
std/rpc/: rpc.h  rpc.sc  server_fn.h  server_fn.sc
std/sched/: io_nb.h  io_nb.sc  io_nb_bsd.sc  io_nb_linux.sc  io_nb_win32.sc  reactor.h  reactor.sc  reactor_epoll.sc  reactor_kqueue.sc  reactor_win32.sc
std/scx/: scx.h  scx.sc
std/serial/: csv.h  csv.sc  html.h  html.sc  json.h  json.sc  markdown.h  markdown.sc  protobuf.h  protobuf.sc  serial.h  value.h  value.sc  xml.h  xml.sc  yaml.h  yaml.sc
std/simd/: aarch64.h  cortex_m.h  cortex_m.sc  cuda.h  riscv.h  rocm.h  simd.h  simd.sc  spirv.h  wasm.h  x86_64.h
std/sync/: bare_spawn.sc  channel.h  channel.sc  lockfree.h  lockfree.sc  mpsc.h  mpsc.sc  spinlock.h  spinlock.sc  task.h  task.sc  thread_bare.h  thread_bare.sc
std/test/: bench.h  bench.sc  fuzz.h  fuzz.sc  test.h  test.sc
std/wasm/: dom.h  dom.sc  hydrate.h  hydrate.sc  wasm_rt.h  wasm_rt.sc
